--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,17 +3,26 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(278px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 16px;
 }
 
 .cards > ul > li {
-  border: 1px solid var(--dark-color);
-  background-color: var(--background-color)
+  /* border: 1px solid var(--highlight-background-color); */
+  background-color: transparent;
 }
 
 .cards .cards-card-body {
   margin: 16px;
+  text-align: left;
+}
+
+.cards .cards-card-body h3 {
+  font-size: var(--body-font-size-xs);
+}
+
+.cards .cards-card-body h5 {
+  font-size: var(--body-font-size-xxs);
 }
 
 .cards .cards-card-image {
@@ -28,4 +37,6 @@
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
+  border-radius: 9px;
+  box-shadow: 9px 20px 12px #ebebeb;
 }
