--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,8 @@
   /* fonts */
   --body-font-family: roboto, roboto-fallback;
   --heading-font-family: var(--body-font-family);
-  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
+  /* --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace; */
+   --fixed-font-family: Helvetica,Arial,sans-serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
