--- a/styles/styles.css
+++ b/styles/styles.css
@@ -207,5 +207,5 @@ main .section {
 /* section metadata */
 main .section.light,
 main .section.highlight {
-  background-color: var(--light-color);
+  /* background-color: var(--light-color); */
 }
